--- a/config-yml/serial_holding_export.export.yml
+++ b/config-yml/serial_holding_export.export.yml
@@ -23,7 +23,7 @@ holding_types:
       embargo_info: ~
       coverage_depth: getCoverageDepth
       coverage_notes: getCoverageNotes
-      publisher_name: ~
+      publisher_name: getPublicationPublisher
       location: getHoldingLocation
       title_notes: ~
       staff_notes: ~
@@ -55,7 +55,7 @@ holding_types:
       embargo_info: ~
       coverage_depth: getCoverageDepth
       coverage_notes: getCoverageNotes
-      publisher_name: ~
+      publisher_name: getPublicationPublisher
       location: getHoldingLocation
       title_notes: ~
       staff_notes: ~
@@ -87,7 +87,7 @@ holding_types:
       embargo_info: ~
       coverage_depth: getCoverageDepth
       coverage_notes: getCoverageNotes
-      publisher_name: ~
+      publisher_name: getPublicationPublisher
       location: getHoldingLocation
       title_notes: ~
       staff_notes: ~
