NBNP-87 Increase scaling size for sample image

--- a/config-yml/image.style.sample_publication_image.yml
+++ b/config-yml/image.style.sample_publication_image.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 name: sample_publication_image
-label: 'Sample publication image (width:100px)'
+label: 'Sample publication image (height:230px)'
 effects:
   b1c9d7a1-d8bc-4060-998a-ecd788d3c6b1:
     uuid: b1c9d7a1-d8bc-4060-998a-ecd788d3c6b1
@@ -11,5 +11,5 @@ effects:
     weight: 1
     data:
       width: null
-      height: 180
+      height: 230
       upscale: false
