NBNP-195 Add Chinese Simplified+Russian, multi-language support

--- a/config-yml/field.storage.node.field_language.yml
+++ b/config-yml/field.storage.node.field_language.yml
@@ -20,15 +20,17 @@ settings:
     current_interface: 0
     authors_default: 0
   included_languages:
+    zh-hans: zh-hans
     en: en
     fr: fr
+    ru: ru
   excluded_languages: {  }
   groups: ''
   maxlength: 12
   allowed_values_function: languagefield_allowed_values
 module: languagefield
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
