--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
@@ -63,7 +64,7 @@ third_party_settings:
         - field_last_issue_date
         - field_last_issue_approx_date
       parent_name: ''
-      weight: 7
+      weight: 8
       format_type: details
       format_settings:
         label: 'Date of Publication'
@@ -101,7 +102,7 @@ third_party_settings:
         - field_serial_relation_suc_ref_up
         - field_serial_relation_suc_ref_dn
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: details
       format_settings:
         label: Relationships
@@ -118,12 +119,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 19
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
   field_credit:
-    weight: 17
+    weight: 18
     settings:
       rows: 2
       placeholder: ''
@@ -137,6 +138,15 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textarea
+    region: content
+  field_editor:
+    weight: 6
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_family:
     weight: 5
@@ -248,7 +258,7 @@ content:
     type: options_select
     region: content
   field_frequency:
-    weight: 8
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -256,7 +266,7 @@ content:
     type: string_textfield
     region: content
   field_frequency_notes:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -322,7 +332,7 @@ content:
     type: boolean_checkbox
     region: content
   field_issn:
-    weight: 12
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -330,7 +340,7 @@ content:
     type: string_textfield
     region: content
   field_language:
-    weight: 16
+    weight: 17
     settings:
       format:
         name: name
@@ -422,7 +432,7 @@ content:
     type: options_select
     region: content
   field_oclc:
-    weight: 13
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -437,7 +447,7 @@ content:
     type: address_default
     region: content
   field_previous_identifications:
-    weight: 24
+    weight: 25
     settings:
       size: 60
       placeholder: ''
@@ -445,7 +455,7 @@ content:
     type: string_textfield
     region: content
   field_publisher:
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -509,7 +519,7 @@ content:
     type: string_textfield
     region: content
   field_subject_notes:
-    weight: 11
+    weight: 12
     settings:
       rows: 4
       placeholder: ''
@@ -517,7 +527,7 @@ content:
     type: string_textarea
     region: content
   field_subjects:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -534,7 +544,7 @@ content:
     type: string_textfield
     region: content
   field_supplemental_information:
-    weight: 15
+    weight: 16
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
@@ -558,7 +568,7 @@ content:
     region: content
   path:
     type: path
-    weight: 22
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -566,21 +576,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 20
+    weight: 21
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 23
+    weight: 24
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 21
+    weight: 22
     region: content
     third_party_settings: {  }
   title:
@@ -593,7 +603,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
