--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
@@ -61,7 +62,7 @@ third_party_settings:
         - field_last_issue_date
         - field_last_issue_approx_date
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: details
       format_settings:
         id: ''
@@ -76,14 +77,22 @@ bundle: publication
 mode: default
 content:
   field_description:
-    weight: 13
+    weight: 14
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
+  field_editor:
+    weight: 5
+    label: above
+    settings:
+      link: false
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_family:
-    weight: 15
+    weight: 16
     label: above
     settings:
       link: true
@@ -109,14 +118,14 @@ content:
     type: daterange_default
     region: content
   field_first_issue_date_type:
-    weight: 19
+    weight: 20
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_first_issue_search_date:
-    weight: 28
+    weight: 29
     label: above
     settings:
       format_type: medium
@@ -125,7 +134,7 @@ content:
     type: datetime_default
     region: content
   field_frequency:
-    weight: 7
+    weight: 8
     label: above
     settings:
       link_to_entity: false
@@ -133,7 +142,7 @@ content:
     type: string
     region: content
   field_frequency_notes:
-    weight: 8
+    weight: 9
     label: above
     settings:
       link_to_entity: false
@@ -149,7 +158,7 @@ content:
     type: string
     region: content
   field_is_supplementary_title:
-    weight: 17
+    weight: 18
     label: above
     settings:
       format: default
@@ -159,7 +168,7 @@ content:
     type: boolean
     region: content
   field_issn:
-    weight: 11
+    weight: 12
     label: above
     settings:
       link_to_entity: false
@@ -185,14 +194,14 @@ content:
     type: daterange_default
     region: content
   field_last_issue_date_type:
-    weight: 18
+    weight: 19
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_last_issue_search_date:
-    weight: 29
+    weight: 30
     label: above
     settings:
       format_type: medium
@@ -201,7 +210,7 @@ content:
     type: datetime_default
     region: content
   field_oclc:
-    weight: 12
+    weight: 13
     label: above
     settings:
       link_to_entity: false
@@ -217,7 +226,7 @@ content:
     region: content
   field_previous_identifications:
     type: string
-    weight: 27
+    weight: 28
     region: content
     label: above
     settings:
@@ -232,7 +241,7 @@ content:
     type: entity_reference_label
     region: content
   field_sample_image:
-    weight: 26
+    weight: 27
     label: hidden
     settings:
       image_style: sample_publication_image
@@ -241,30 +250,6 @@ content:
     type: image
     region: content
   field_serial_relation_pre_ref_dn:
-    weight: 23
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_serial_relation_pre_ref_up:
-    weight: 22
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_serial_relation_suc_ref_dn:
-    weight: 25
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_serial_relation_suc_ref_up:
     weight: 24
     label: above
     settings:
@@ -272,29 +257,53 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_serial_relationship_op_pre:
-    weight: 20
+  field_serial_relation_pre_ref_up:
+    weight: 23
     label: above
-    settings: {  }
+    settings:
+      link: true
     third_party_settings: {  }
-    type: list_default
+    type: entity_reference_label
     region: content
-  field_serial_relationship_op_suc:
+  field_serial_relation_suc_ref_dn:
+    weight: 26
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_serial_relation_suc_ref_up:
+    weight: 25
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_serial_relationship_op_pre:
     weight: 21
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
+  field_serial_relationship_op_suc:
+    weight: 22
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_subject_notes:
-    weight: 10
+    weight: 11
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_subjects:
-    weight: 9
+    weight: 10
     label: above
     settings:
       link_to_entity: false
@@ -310,7 +319,7 @@ content:
     type: string
     region: content
   field_supplemental_information:
-    weight: 6
+    weight: 7
     label: above
     settings:
       use_description_as_link_text: true
@@ -318,7 +327,7 @@ content:
     type: file_default
     region: content
   field_this_is_part_of_a_family:
-    weight: 16
+    weight: 17
     label: above
     settings:
       format: default
@@ -335,7 +344,7 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
