NBNP-126 Newspaper Admin: create pub field terms when nonexistent

--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -12,6 +12,9 @@ permissions:
   - 'administer serial issue entities'
   - 'administer serial page entities'
   - 'create publication content'
+  - 'create terms in editor'
+  - 'create terms in family'
+  - 'create terms in publisher'
   - 'delete any publication content'
   - 'edit any publication content'
   - 'edit serial page entities'
