NBNP-57 Add description+set access permissions: Digital Title Listing

--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -9,10 +9,11 @@ dependencies:
     - address
     - digital_serial_title
     - node
+    - user
 id: digital_title_listing
 label: 'Digital Title Listing'
 module: views
-description: ''
+description: 'Listing of all publications associated with a ''Digital'' Serial Holding Type.'
 tag: ''
 base_table: digital_serial_title
 base_field: id
@@ -25,8 +26,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
@@ -535,6 +537,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user.permissions
       tags:
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
@@ -554,6 +557,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user.permissions
       tags:
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
