--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -188,7 +188,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_label
           settings:
-            link: false
+            link: true
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -202,72 +202,6 @@ display:
           entity_type: digital_serial_title
           entity_field: parent_title
           plugin_id: field
-        id:
-          id: id
-          table: digital_serial_title
-          field: id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Digital Title ID'
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: number_integer
-          settings:
-            thousand_separator: ''
-            prefix_suffix: true
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: digital_serial_title
-          entity_field: id
-          plugin_id: field
         field_sort_title:
           id: field_sort_title
           table: node__field_sort_title
@@ -280,8 +214,8 @@ display:
           alter:
             alter_text: true
             text: '{{ parent_title }}'
-            make_link: true
-            path: '/serials/{{ id }}'
+            make_link: false
+            path: ''
             absolute: false
             external: false
             replace_spaces: false
