--- a/config-yml/serial_holding_export.export.yml
+++ b/config-yml/serial_holding_export.export.yml
@@ -66,7 +66,7 @@ holding_types:
       oclc_linkscheme: ~
       oclc_number: getPublicationOclcNumber
       ACTION: getAction
-  Digital:
+  Online:
     action: overlay
     collection_name: Newspapers @ UNB Libraries (Digital)
     collection_id: customer.133054.unbnewsdb
