NBNP-18 Configure display: thumbnail linked to fullsize image

--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -245,7 +245,7 @@ content:
     label: hidden
     settings:
       image_style: sample_publication_image
-      image_link: ''
+      image_link: file
     third_party_settings: {  }
     type: image
     region: content
